# contribution-significance-index

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: dev_container_release.yml
src/contribution-significance-index/: __init__.py
